Avatar warp bug on mobile fixed

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -428,10 +428,6 @@ footer {
 		margin-bottom: 5rem;
 	}
 	
-	.avatar {
- 		padding-bottom: 5.5rem;
-	}
-	
 }
 
 @media screen and (min-width: 40rem) {
